// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Logo > renders the logo for authView location 1`] = `
"<div class="logoContainer authView" data-test-id="n8n-logo">
  <div class="logoText">Automation</div>
</div>"
`;

exports[`Logo > renders the logo for sidebar location when sidebar is collapsed 1`] = `
"<div class="logoContainer sidebar sidebarCollapsed" data-test-id="n8n-logo">
  <div class="logoText">Automation</div>
</div>"
`;

exports[`Logo > renders the logo for sidebar location when sidebar is expanded 1`] = `
"<div class="logoContainer sidebar sidebarExpanded" data-test-id="n8n-logo">
  <div class="logoText">Automation</div>
</div>"
`;
